# internal-rag-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  model_download.py  pyproject.toml
app/api/: main_service.py
app/clients/: milvus_utils.py  minio_utils.py  mongo_history_utils.py
app/conf/: bailian_mcp_config.py  embedding_config.py  lm_config.py  milvus_config.py  mineru_config.py  minio_config.py  reranker_config.py
app/core/: load_prompt.py  logger.py
app/import_process/agent/: main_graph.py  state.py
app/import_process/agent/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
app/import_process/api/: file_import_service.py
app/import_process/pages/: import.html
app/lm/: embedding_utils.py  lm_utils.py
app/query_process/agent/: main_graph.py  state.py
app/query_process/agent/nodes/: node_answer_output.py  (+6 more)
app/query_process/api/: query_server.py
app/query_process/page/: chat.html  query_monitor.html
app/tool/: download_bgem3.py  download_reranker.py
app/utils/: escape_milvus_string_utils.py  format_utils.py  path_util.py  sse_utils.py  task_utils.py
prompts/: answer_out.prompt  hyde_prompt.prompt  image_summary.prompt  item_name_recognition.prompt  product_recognition_system.prompt  rewritten_query_and_itemnames.prompt  rewritten_query_and_keywords.prompt
roadmap/: frontend-react-migration-dev-plan.md  frontend-react-migration.md
tests/: test_graph_flow.py  test_node_entry.py
